# MotionProject

./: README.md
src/flexiv_description/launch/: view_rizon.launch.py  view_rizon_kinematics.launch.py
src/flexiv_kinematics_ros/: CMakeLists.txt  package.xml
src/flexiv_kinematics_ros/include/flexiv_kinematics_ros/: flexiv_ros_kinematics_utils.hpp
src/flexiv_kinematics_ros/launch/: view_flexiv.launch.py
src/flexiv_kinematics_ros/src/: example_node.cpp  flexiv_ros_kinematics_utils.cpp  null_space_example.cpp  nullspace_control.cpp
src/motion_projection/: CMakeLists.txt  package.xml
src/motion_projection/Open3D/include/open3d/: Open3D.h
src/motion_projection/include/motion_projection/: helper_functions.hpp  mesh_projection.hpp  mesh_visualization.hpp  ros_kinematics_utility.hpp
src/motion_projection/src/: example_build_adjusancy_map.cpp  example_generate_mesh.cpp  example_node.cpp  example_robot_motion.cpp  helper_functions.cpp  mesh_projection.cpp  mesh_visualization.cpp  motion_projection_pcd.cpp  motion_projection_pcd_2.cpp  ros_kinematics_utility.cpp
src/motion_projection/urdf/: UR_NOEE.urdf
