<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_projection</name>
  <version>0.0.1</version>
  <description>Kinematics utility and projection tools for UR5e and Flexiv robots</description>

  <maintainer email="angel@todo.todo">angel</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>Eigen3</depend>
  <depend>rcl</depend>

  <!-- Your custom library -->
  <depend>kinematic_and_dynamic_utils</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
